[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "fastapi-keycloak-middleware>=1.6.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "uvicorn[standard]>=0.49.0",
]
